# the_experiment

./: .dockerignore  .gitignore  .sesskey  Dockerfile  README.md  docker.txt  pyproject.toml  requirements.txt  start_app.ps1
data/: statuses.json  token_probabilities.json
datasets/: test.jsonl  train.jsonl  validation.jsonl
src/causal_experiment/: __init__.py  calculator.py  dataset.py  train_small_causal_model.py
src/causal_experiment/components/: calculator_components.py
src/causal_experiment/compontens/: DatasetTable.py  LAlignedIconTxt.py  LAlignedTxtIcon.py  NavP.py
src/causal_experiment/eval/: model_eval.py
src/causal_experiment/modules/: app_frame.py  calculator_view.py  dataset_view.py  test_view.py  train_view.py
src/causal_experiment/visualizer/: alt.py  dataset_visualizer.py
src/the_experiment/: __init__.py  test.py  train_small_causal_model.py
src/the_experiment/app/components/: calculator_components.py  dataset_list.py  sankeynator.py  training_monitor.py
src/the_experiment/app/modules/: analyzer_view.py  calculator_view.py  dataset_view.py  heatmap.py  rules_editor_view.py  rules_playground.py  shoelace_app.py  train_view.py  weight_view.py
src/the_experiment/comparison/: cnn2_lm.py  load_model.py  mann_eval.py  model_eval.py  rnn_lm.py  train_cnn.py  train_cnn2.py  train_mann.py  train_rnn.py
src/the_experiment/components/: calculator_components.py  dataset_list.py  training_monitor.py
src/the_experiment/eval/: model_eval.py
src/the_experiment/models/: dataset.py  load_data.py  load_model.py  model_eval.py
src/the_experiment/models/cnn/: cnn_lm.py  cnn_monitor.py  train_cnn.py
src/the_experiment/models/cnn2/: cnn2_eval.py  cnn2_lm.py  train_cnn2.py
src/the_experiment/models/gpt2/: train_small_causal_model.py
src/the_experiment/models/mann/: mann_eval.py  mann_lm.py  train_mann.py
src/the_experiment/models/rnn/: rnn_lm.py  rnn_monitor.py  train_rnn.py
src/the_experiment/modules/: calculator_view.py  dataset_view.py  heatmap.py  playground1.py  playground2.py  playground3.py  shoelace_app.py  train_view.py
src/the_experiment/rules/: rules.py
src/the_experiment/state/: state.py
src/the_experiment/tools/sankey/: sankey_chart.py  sankey_chart2.py  sankey_template.html  sankey_transformers.py  senkey_vllm.py
src/the_experiment/utils/: callbacks.py  deploy.py  helper.py  train_sse.py
